fix path-bug and wrap logo in <a>

--- a/src/components/SectionProfile.css
+++ b/src/components/SectionProfile.css
@@ -5,7 +5,7 @@
 .section__image {
 	max-width: 100%;
 	height: 120px;
-	background-image: url("./img/texture.PNG");
+	background-image: url("./../img/texture.PNG");
 	background-size: contain;
 	background-repeat: round;
 }
